--- a/src/Makefile
+++ b/src/Makefile
@@ -1,75 +1,55 @@
 CC = g++
-FLAG_C = -c
-FLAG_O = -o
-ASAN = -g -fsanitize=address
-FLAG_COV = --coverage
+FLAG_COV = -O2 -g --coverage -fno-inline --coverage 
 FLAG_ER = -Wall -Werror -Wextra -std=c++17
-VALGRIND_FLAGS = --leak-check=full --show-leak-kinds=all --track-origins=yes
-FLAG_TESTS = -lgcov -lsubunit -lgtest -lgtest_main
-
-s21_CONTAINERS_CPP = s21_*.cpp
-s21_CONTAINERS_O = s21_*.o
+#FLAG_TESTS = -L/usr/local/lib -lgtest -pthread -lgtest_main -lm -lgcov -fprofile-arcs -ftest-coverage -Wno-deprecated-copy -Wno-unused-parameter
+FLAG_TESTS = -L/usr/local/lib -lgtest -pthread -lgtest_main -lm -lgcov
 OUTDIR = BUILD
-TESTDIR = TESTS
-LIBDIR = CONTAINERS
-SUITE_CASES_CPP = suite_*.cpp
-SUITE_CASES_O = suite_*.o
+SUITE_CASES_O = BUILD/*.o
+s21_CONTAINERS_SPP_TESTS = tests/gtest_start_point.cc
+TESTS_CPP = tests/*.cc
+VALGRIND_FLAGS = --leak-check=full --show-leak-kinds=all --track-origins=yes -s
 
-all: clean gcov_report
+all: test
 
-test:
-	rm -rf BUILD
-	mkdir BUILD
-	for file in $(TESTDIR)/$(SUITE_CASES_CPP); do \
-		$(CC) $(FLAG_C) $(FLAG_ER) $(FLAG_COV) $$file -o $(OUTDIR)/$$(basename $$file .cpp).o; \
-	done
-	$(CC) $(FLAG_ER) -o $(OUTDIR)/tests $(OUTDIR)/$(SUITE_CASES_O) $(FLAG_TESTS)
-	./$(OUTDIR)/tests
+test: clean build
+	$(CC) $(FLAG_ER) $(FLAG_COV) $(TESTS_CPP) -o $(OUTDIR)/test $(FLAG_TESTS)
+	./$(OUTDIR)/test
+
+gcov_report: make_report report
+
+make_report:
+	@gcovr --html-details  --exclude-unreachable-branches --filter='.*\.inc' -o $(OUTDIR)/report.html
 
 
-asan:
-	rm -rf BUILD
-	mkdir BUILD
-	for file in $(TESTDIR)/$(SUITE_CASES_CPP); do \
-		$(CC) $(FLAG_C) $(FLAG_ER) $(FLAG_COV) $$file -o $(OUTDIR)/$$(basename $$file .cpp).o; \
-	done
-	$(CC) $(FLAG_ER) -o $(OUTDIR)/tests $(OUTDIR)/$(SUITE_CASES_O) $(FLAG_TESTS) $(ASAN)
-	./$(OUTDIR)/tests
+report:
+	@echo "..открытие отчета."      
+	@open $(OUTDIR)/report.html
 
-valgrind_test:
-	rm -rf BUILD
-	mkdir BUILD
-	for file in $(TESTDIR)/$(SUITE_CASES_CPP); do \
-		$(CC) $(FLAG_C) $(FLAG_ER) $(FLAG_COV) $$file -o $(OUTDIR)/$$(basename $$file .cpp).o; \
-	done
-	$(CC) $(FLAG_ER) -o $(OUTDIR)/tests $(OUTDIR)/$(SUITE_CASES_O) $(FLAG_TESTS)
-	valgrind $(VALGRIND_FLAGS) ./$(OUTDIR)/tests
-
-gcov_report: test
-	lcov -c -d $(OUTDIR) -o $(OUTDIR)/test_coverage.info
-
-	lcov -r $(OUTDIR)/test_coverage.info '/usr/*' -o $(OUTDIR)/test_coverage_filtered.info
-	lcov -r $(OUTDIR)/test_coverage_filtered.info '*/gtest/*' -o $(OUTDIR)/test_coverage_filtered.info
-	lcov -r $(OUTDIR)/test_coverage_filtered.info '*/gtest/internal/*' -o $(OUTDIR)/test_coverage_filtered.info
-	lcov -r $(OUTDIR)/test_coverage_filtered.info '*/bits/*' -o $(OUTDIR)/test_coverage_filtered.info
-	lcov -r $(OUTDIR)/test_coverage_filtered.info '*/ext/*' -o $(OUTDIR)/test_coverage_filtered.info
-	lcov -r $(OUTDIR)/test_coverage_filtered.info '*/suite_*.cpp' -o $(OUTDIR)/test_coverage_filtered.info
-
-	genhtml -o $(OUTDIR)/report $(OUTDIR)/test_coverage_filtered.info
-	open $(OUTDIR)/report/index.html
-
-gcov_report_gcov: test
-	gcovr --html-details -o $(OUTDIR)/report.html
+valgrind_test: 
+	valgrind $(VALGRIND_FLAGS) ./$(OUTDIR)/test
 
 style_check:
-	cp ../materials/linters/.clang-format .
-	clang-format -i $(LIBDIR)/*.h $(LIBDIR)/*.tpp $(TESTDIR)/*.cpp
-	clang-format -n $(LIBDIR)/*.h $(LIBDIR)/*.tpp $(TESTDIR)/*.cpp
-	rm -rf .clang-format
+	@echo "Проверка стиля кода..."
+	@cp ../materials/linters/.clang-format ./
+	@find . -name "*.inc" -o -name "*.h" | xargs clang-format -n > tmp.log 2>&1
+	@if ! grep -q "warning" tmp.log; then \
+		echo "\033[32mСтиль кода соответствует.\033[0m"; \
+		else \
+		echo "\033[31mСтиль кода не соответствует.\033[0m"; \
+		fi
+	@rm -rf .clang-format tmp.log
+
+style_fix:
+	@cp ../materials/linters/.clang-format ./
+	@find . -name "*.inc" -o -name "*.h" | xargs clang-format -i
+	@echo "\033[33mСтиль кода исправлен.\033[0m";
+	@rm -rf .clang-format
+
 
 clean:
-	-rm -rf BUILD
-	-rm -rf *.o *.html *.gcda *.gcno *.css *.a *.gcov *.info *.out *.cfg *.txt
-	-rm -f tests
-	-rm -f report
-	find . -type d -name 'tests.dSYM' -exec rm -r {} +
+	@-rm -rf BUILD
+	@echo "Папка очищена."
+
+build:
+	@-rm -rf BUILD/*
+	@mkdir -p BUILD
